# nature_of_code_in_rust

./: Cargo.toml  LICENSE  README.md
chapter1/traditional_random_walk/: Cargo.toml
chapter_1/example_1_10_acceleration_towards_mouse/: Cargo.toml
chapter_1/exercise_1_8_velocity_with_acceleration/: Cargo.toml
chapter_2/example_2_2_forces_acting_on_many_objects/: Cargo.toml
chapter_2/example_2_5_fluid_resistance/: Cargo.toml  README.md
chapter_2/example_2_6_attraction/: Cargo.toml
chapter_2/example_2_8_mutual_attraction/: Cargo.toml
chapter_3/exercise_3_1/: Cargo.toml
ecosystem/: Cargo.toml  README.md
ecosystem/src/: food.rs  lib.rs  main.rs  random_walker.rs
example_1_10_accelerating_towards_the_mouse/src/: mover.rs
example_1_11_array_of_movers_accelerating_towards_the_mouse/src/: lib.rs  mover.rs
example_1_1_bouncing_ball_with_no_vectors/src/: lib.rs  main.rs
example_1_2_bouncing_ball_with_vectors/src/: lib.rs
example_1_3_vector_subtraction/: Cargo.toml
example_1_3_vector_subtraction/src/: lib.rs
example_1_7_motion_101_velocity/: Cargo.toml
example_1_8_motion_101_velocity_and_constant_acceleration/: Cargo.toml
example_2_1_forces/src/: lib.rs
example_2_4_including_friction/: Cargo.toml
example_i_5_perlin_noise_walker/: Cargo.toml
example_i_6_2d_perlin_noise/: Cargo.toml
exercise_1_1/: Cargo.toml
exercise_1_4/: Cargo.toml
exercise_1_4/src/: lib.rs
exercise_i_1/: Cargo.toml
exercise_i_6/: Cargo.toml
exercise_i_9/: Cargo.toml
src/: lib.rs  main.rs  mover.rs  utilities.rs  walker.rs  zone.rs
template/: Cargo.toml
(+84 files in other folders)
