[package]
name = "template"
version = "0.1.0"
authors = ["Brooks Patton <brooks@brookzerker.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
noise = "0.7.0"
eyre = "0.6.5"
rand = "0.8.3"
num = "0.4.0"